Adding further changes

--- a/src/components/atoms/polygon/index.css
+++ b/src/components/atoms/polygon/index.css
@@ -1,10 +1,14 @@
-.square{
-    height: 50px;
-    width: 50px;
+.square {
+    /* height: 50px; */
+    /* width: 50px; */
     background-color: navy;
     background-image: linear-gradient(to bottom, purple, violet);
     border-style: solid;
     border-width: 1px;
     border-color: cornflowerblue;
     border-radius: 0.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* flex-grow: 1; */
 }
