--- a/src/components/pages/flex/index.css
+++ b/src/components/pages/flex/index.css
@@ -1,5 +1,25 @@
-.flex{
+.flex_main {
+    width: 80%;
+    margin: 0 auto;
     display: flex;
-    flex-direction: row;
-    gap: 0.25rem;
+    flex-direction: column;
+    gap: 1.5rem;
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* gap: 0.25rem; */
+    /* width: 50%; */
+    /* margin: 0 auto; */
+    /* flex-wrap: wrap; */
+    /* flex-grow: 1; */
+}
+
+.flex_main_output {
+    display: flex;
+    gap: 1.5rem;
+    width: 100%;
+    margin: 0 auto;
+    outline: 1px solid green;
+    box-sizing: border-box;
+    padding: 0.5rem;
+    height: 12.85rem;
 }
